# MCL

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  configure  configure.in  index.html  install  params.json
check/: Makefile  cmcl.cc  color.cc  color_map.cc  configure.in  convert.cc  distance.cc  io.cc  main.cc  size.cc  symmetry.cc  transform.cc
check/cmcl/: configure.in  test.cc
check/color/: configure.in  test.cc
check/color_map/: configure.in  test.cc
check/compil/: Makefile  configure.in  test.cc
check/convert/: configure.in  test.cc
check/default/: configure.in  test.cc
check/distance/: configure.in  test.cc
check/io/: test.cc
check/size/: Makefile  test.cc
check/symmetry/: configure.in  test.cc
check/transform/: test.cc
doc/: convert.dot
doc/input/: filter  main.md  regen
doxygen/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00011.html  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00021.html  a00021.js  a00022.html  a00022.js  a00023.html  (+437 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_b.js  files_c.js  search.css  search.js
include/nauths/mcl/: cmcl.h  color.hh  color.hxx  color_map.hh  color_map.hxx  constants.hh  convert.hh  convert.hxx  distance.hh  distance.hxx  environment.hh  environment.hxx  interpolation.hh  interpolation.hxx  io.hh  io.hxx  mcl.hh  profile.hh  profile.hxx  transform.hh  transform.hxx
include/nauths/mcl/misc/: endomorphism.hh  endomorphism.hxx  math.hh  monoid.hh  monoid.hxx  types.hh
include/nauths/mcl/spaces/: cmy.hh  cmy.hxx  cmyk.hh  cmyk.hxx  hsl.hh  hsl.hxx  hsv.hh  hsv.hxx  lab.hh  lab.hxx  lch.hh  lch.hxx  rgb.hh  rgb.hxx  space_macros.hh  space_type.hh  spaces.hh  xyz.hh  xyz.hxx
scripts/: analysis  check  coverage  src  tarball  todo
src/: cmcl.cc  color.cc  color_map.cc  constants.cc  convert.cc  distance.cc  environment.cc  interpolation.cc  io.cc
src/misc/: once.hh  trie.cc  trie.hh
src/spaces/: cmy.cc  cmyk.cc  hsl.cc  hsv.cc  lab.cc  lch.cc  rgb.cc  space_type.cc  xyz.cc
tools/: Makefile
tools/clcc/: clcc.cc  configure.in  options.cc  options.hh
tools/clcd/: Makefile  clcd.cc  configure.in  options.cc  options.hh
tools/clct/: clct.cc  configure.in  options.cc  options.hh
