## configure.in
## Made by nicuveo for mcl

ANALYSE_OPTS = -o "-I ../include"
COVERAGE_OPTS = -t mcl -o "--no-branch-coverage"
COVERAGE_OUT = ../doc/coverage

TESTS =       \
    cmcl      \
    color     \
    color_map \
    compil    \
    convert   \
    distance  \
    io        \
    size      \
    symmetry  \
    transform \

CFIL = $(shell ../scripts/src | sed 's%^%../%')
